2011-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Convert link file names
	for Cygwin.

2011-11-27  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-group.el (gnus-group-prepare-flat):
	* mm-bodies.el (mm-encode-body):
	* mml.el (mml-preview):
	* nnml.el (nnml-request-compact-group):
	* pop3.el (pop3-stream-type): Spelling fix.

2011-11-26  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-start.el (gnus-newsrc-to-gnus-format): Spelling fix.

2011-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	* color.el (color-rgb-to-hsl):
	* gmm-utils.el (gmm-tool-bar-style):
	* gnus-group.el (gnus-group-prepare-flat):
	* gnus-topic.el (gnus-topic-prepare-topic):
	* mm-decode.el (mm-discouraged-alternatives):
	* rfc2047.el (rfc2047-encode-1):
	* starttls.el: Spelling fix.

2011-11-24  Glenn Morris  <rgm@gnu.org>

	* binhex.el (binhex-begin-line): Give it basic doc-string.

	* starttls.el, tls.el: Fix case of "GnuTLS".

2011-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-group.el (gnus-group-highlight): Fix typo.

2011-11-24  Adam W  <adam_w67@yahoo.com>  (tiny change)

	* mail-source.el (mail-source-fetch-maildir): Don't expect the return
	value of `delete-file', that returns nil for a local file but returns t
	for a remote file using ssh.

2011-11-22  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-sum.el (gnus-summary-save-article): Spelling fix.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Use "?\s" instead of "? " to
	avoid later breakage.

2011-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-setup-buffer): Decode group name used for
	article buffers' name.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Revert infinite loops introduced
	by Paul Eggert's spellfixes two days ago.

2011-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el (fboundp): Define `with-demoted-errors' for Emacsen that
	doesn't have it.
