@@ -6366,6 +6366,7 @@ between beginning of field and beginning of line."
 
 (defun message-pop-to-buffer (name &optional switch-function)
   "Pop to buffer NAME, and warn if it already exists and is modified."
+  (unless switch-function (setq switch-function #'pop-to-buffer))
   (let ((buffer (get-buffer name)))
     (if (and buffer
 	     (buffer-name buffer))
@@ -6375,7 +6376,7 @@ between beginning of field and beginning of line."
 	      (progn
 		(gnus-select-frame-set-input-focus (window-frame window))
 		(select-window window))
-	    (funcall (or switch-function 'switch-to-buffer) buffer)
+	    (funcall switch-function buffer)
 	    (set-buffer buffer))
 	  (when (and (buffer-modified-p)
 		     (not (prog1
@@ -6383,7 +6384,7 @@ between beginning of field and beginning of line."
 			       "Message already being composed; erase? ")
 			    (message nil))))
 	    (error "Message being composed")))
-      (funcall (or switch-function 'switch-to-buffer) name)
+      (funcall switch-function name)
       (set-buffer name))
     (erase-buffer)
     (message-mode)))
